installer/kubernetes/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-console-ingress
  namespace: iam-system
spec:
  ingressClassName: nginx
  rules:
    - host: iam.wecoding.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: iam-console-service
                port:
                  number: 8080
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  #tls:
  #  - hosts:
  #      - www.example.com
  #    secretName: example-tls
